<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/cu_cr_white" android:layout_marginRight="10dip"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:layout_marginLeft="10dip">
    <TextView  android:id="@+id/cu_tv_title"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="15dip"
            android:textColor="@color/cu_cr_blue1" android:text="@string/cu_tv_sex" android:textSize="18sp" />
    
     <ImageView  android:id="@+id/cu_iv_line" android:layout_width="fill_parent" android:layout_height="1dip"  android:background="@color/cu_cr_blue1" />
     
      <TextView  android:id="@+id/cu_tv_sex_men"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="15dip"
            android:textColor="@color/cu_cr_black1" android:text="@string/cu_tv_sex_men" android:textSize="16sp" />
      
      
      <ImageView  android:id="@+id/cu_iv_line2" android:layout_width="fill_parent" android:layout_height="0.5dip"  android:background="@color/cu_cr_blue1" />
      
      <TextView  android:id="@+id/cu_tv_sex_women"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="15dip"
            android:textColor="@color/cu_cr_black1" android:text="@string/cu_tv_sex_women" android:textSize="16sp" />
      
     
  
    
    
</LinearLayout>
